Eigene Events: In Parent App Komponente (showDetailEvent) mit EventEmitter<Book> in book-list / Dito Parent APP (showListEvent) welcher als Button in book-detail ausgelöst wird (bis S.114)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<bm-book-list></bm-book-list>
+<bm-book-list *ngIf="listOn" (showDetailEvent)="showDetails($event)"></bm-book-list>
+<bm-book-details *ngIf="detailsOn" [book]="book" (showListEvent)="showList()"></bm-book-details>
 
 
 
