--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,5 +1,5 @@
 <div class="ui middle aligned selection divided list">
-  <a *ngFor="let b of books" class="bm-book-list-item item" [book]="b">
+  <a *ngFor="let b of books" class="bm-book-list-item item" [book]="b" (click)="showDetails(b)">
     Buchtitel:
   </a>
 </div>
